--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,33 +2,47 @@
 <div class="container">
   <div class="row my-4">
     <div class="col-lg-12">
+        <% if (message) { %>
+            <div class="alert alert-dismissible fade show alert-<%= message.type%>" role="alert">
+                <button class="btn-close" type="button" data-bs-dismiss="alert" aria-label="Close"></button>
+                <strong><%= message.message %></strong>
+            </div>
+         
+        <% } %>
         <div class="table-responsive">
-            <table class="table table-striped">
-                <thead>
-                    <tr class="table-dark text-center">
-                        <th>ID</th>
-                        <th>Image</th>
-                        <th>Name</th>
-                        <th>E-mail</th>
-                        <th>Phone</th>
-                        <th>Action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th>1</th>
-                        <th><img src="" alt=""></th>
-                        <th>Per</th>
-                        <th>hola@per.com</th>
-                        <th>555555</th>
-                        <th class="text-center">
-                            <a href="" class="text-success"><i class="fas fa-edit da-lg mx-1"></i></a>
-                            <a href="" class="text-danger"><i class="fas fa-trash da-lg mx-1"></i></a>
-                        </th>
-                    </tr>
-                </tbody>
-
-            </table>
+            <% if (users != '') { %>
+                <table class="table table-striped">
+                    <thead>
+                        <tr class="table-dark text-center">
+                            <th>ID</th>
+                            <th>Image</th>
+                            <th>Name</th>
+                            <th>E-mail</th>
+                            <th>Phone</th>
+                            <th>Action</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                       <% users.forEach((row, index) => { %>
+                        <tr class="align-middle">
+                            <th> <%= index %></th>
+                            <th><img src="<%= row.image %>" width="50" class="img-thumbnail" alt=""></th>
+                            <th><%= row.name %></th>
+                            <th><%= row.email %></th>
+                            <th><%= row.phone %></th>
+                            <th class="text-center">
+                                <a href="/edit/<%= row._id %>" class="text-success"><i class="fas fa-edit da-lg mx-1"></i></a>
+                                <a href="/delete/<%= row._id %>" class="text-danger"><i class="fas fa-trash da-lg mx-1"></i></a>
+                            </th>
+                        </tr> 
+                       <% }) %>
+                    </tbody>
+    
+                </table>
+            <% }  else { %>
+                <h1 class="text-center text-secondary mt-5">No users found in database</h1>
+            <% } %>
+            
         </div>
     </div>
   </div>
