--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,14 +3,15 @@
   <div class="row my-4">
     <div class="col-lg-12">
       <% if (message) { %>
-      <div class="alert alert-dismissible fade show alert-<%= message.type%>" role="alert" >
-        <button class="btn-close" type="button" data-bs-dismiss="alert" aria-label="Close"></button>
+      <div class="alert alert-dismissible fade show alert-<%= message.type%>"
+        role="alert">
+        <button class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         <strong><%= message.message %></strong>
       </div>
       <% } %>
       <div class="table-responsive">
         <% if (users != '') { %>
-        <table class="table table-striped  text-center my-3">
+        <table class="table table-striped text-center my-3">
           <thead>
             <tr class="table-dark">
               <th>ID</th>
@@ -22,23 +23,27 @@
             </tr>
           </thead>
           <tbody>
-            <% users.forEach((row, index) => { %>
-            <tr class="align-middle">
-              <th><%= index %></th>
-              <th> <img src="<%= row.image %>" width="50" class="img-thumbnail" /> </th>
-              <th><%= row.name %></th>
-              <th><%= row.email %></th>
-              <th><%= row.phone %></th>
-              <th class="text-center">
-                <a href="/edit/<%= row._id %>" class="text-success"><i class="fas fa-edit da-lg mx-1"></i></a>
-                <a href="/delete/<%= row._id %>" class="text-danger"><i class="fas fa-trash da-lg mx-1"></i></a>
-              </th>
-            </tr>
+            <% users.forEach((row,index) => { %>
+              <tr class="align-middle">
+                <th><%= index %></th>
+                <th>
+                  <img src="<%= row.image %>" width="50" class="img-thumbnail" />
+                </th>
+                <th><%= row.name %></th>
+                <th><%= row.email %></th>
+                <th><%= row.phone %></th>
+                <th class="text-center">
+                  <a href="/edit/<%= row._id %>" class="text-success"><i class="fas fa-edit da-lg mx-1"></i></a>
+                  <a href="/delete/<%= row._id %>" class="text-danger"><i class="fas fa-trash da-lg mx-1"></i></a>
+                </th>
+              </tr>
             <% }) %>
           </tbody>
         </table>
         <% } else { %>
-        <h2 class="text-center text-secondary mt-5">No users found in thedatabase!</h2>
+        <h2 class="text-center text-secondary mt-5">
+          No users found in thedatabase!
+        </h2>
         <% } %>
       </div>
     </div>
